Fix opening of URLs without the leading "http://" part. Based on a patch by Jakub S.

The matcher code already determines that this is a network location,
but it requires calling processUrl again to re-add the "http"
protocol.

BUG:162500

svn path=/trunk/KDE/kdebase/workspace/; revision=812821